changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Tentative fix for bug #3127973: 'detect monster' effect badly positioned.
Nicolas Weeger 2011-05-22

Fix crash with character creation using jxclient.
Nicolas Weeger 2011-05-22

Prevent converters from creating unpaid coins.
Andreas Kirschbaum 2011-05-21

Fix Lythander's pipe not having spell it should.
Nicolas Weeger 2011-05-21

Fix god's knowledge handling always considering the god information as new.
Nicolas Weeger 2011-05-07

Allow messages from lib/messages to be stored through knowledge system.
Nicolas Weeger 2011-05-07

Improve messages (lib/messages): add relative chance, so messages can be
more frequent than others.
Nicolas Weeger 2011-05-07

Remove hard coded stat values - the stat bonuses (as well as max stat) can
be set in a file that is read at load time.  The default lib/stat_bonus
file has bonuses exactly the same as the old hard coded values (or in
case of Charisma, as close as could be done with the change).  Note:
you must do a 'make install' in the lib directory after this update,
otherwise, your server will be missing the stat bonuses and fail to run.
Automake/autoconf should automatically be run to know about the stat_bonus
file.
MSW 2011-05-01

Fix type conversion error and logic mistake resulting in really high prices
when selling items in some situations.
See the end of query_cost() in server/shop.c for more details.
This may fix bug #3163782: Inscription glitch brings 'unimaginable amount of platinum'.
Nicolas Weeger 2011-03-22

==============================================================================
Changes for 1.60.0