@@ -109,6 +109,7 @@ void account_add_player_cmd(char *buf, int len, socket_struct *ns);
 void account_play_cmd(char *buf, int len, socket_struct *ns);
 void send_account_players(socket_struct *ns);
 void create_player_cmd(char *buf, int len, socket_struct *ns);
+void account_password(char *buf, int len, socket_struct *ns);
 /* requestinfo.c */
 void send_new_char_info(socket_struct *ns);
 /* sounds.c */
